# PhysicsEngine

./: .gitignore  CMakeLists.txt  build.sh  run.py
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: camera3d.cpp  main.cpp  render.cpp  space_mesh.cpp
src/include/: camera3d.h  objects.h  render.h
